# BinarySchema

./: CMakeLists.txt  LICENSE  README.md
include/: binary_schema.hpp
src/: binary_schema.cpp
test/: binary_schema_test_main.cpp
